--- a/theme/assets/fonts/font.css
+++ b/theme/assets/fonts/font.css
@@ -1,5 +1,93 @@
 @font-face {
-    font-family: "SVN-Poppins";
-    src: url(./SVN-PoppinsRegular.ttf);
+    font-family: "Kanit";
+    src: url(./Kanit-Thin.ttf);
+    font-weight: 100;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-ThinItalic.ttf);
+    font-weight: 100;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-ExtraLight.ttf);
+    font-weight: 200;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-ExtraLightItalic.ttf);
+    font-weight: 200;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-Light.ttf);
+    font-weight: 300;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-LightItalic.ttf);
+    font-weight: 300;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-Regular.ttf);
     font-weight: 400;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-Medium.ttf);
+    font-weight: 500;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-MediumItalic.ttf);
+    font-weight: 500;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-SemiBold.ttf);
+    font-weight: 600;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-SemiBoldItalic.ttf);
+    font-weight: 600;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-Bold.ttf);
+    font-weight: 700;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-BoldItalic.ttf);
+    font-weight: 700;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-ExtraBold.ttf);
+    font-weight: 800;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-ExtraBoldItalic.ttf);
+    font-weight: 800;
+    font-style: italic;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-Black.ttf);
+    font-weight: 900;
+}
+@font-face {
+    font-family: "Kanit";
+    src: url(./Kanit-BlackItalic.ttf);
+    font-weight: 900;
+    font-style: italic;
 }
